[gd_scene load_steps=4 format=2]

[ext_resource path="res://menus/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://menus/OptionsMenu.gd" type="Script" id=2]
[ext_resource path="res://menus/OptionButton.gd" type="Script" id=3]

[node name="OptionMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -50.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lblTitle" type="Label" parent="."]
margin_right = 220.0
margin_bottom = 19.0
text = "Option Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="selDifficulty" type="OptionButton" parent="."]
margin_top = 23.0
margin_right = 220.0
margin_bottom = 45.0
text = "Difficulty"
script = ExtResource( 3 )
imported_items = [ "Very Easy", "Easy", "Medium", "Hard", "Very Hard", "Impossible?" ]

[node name="lblMusicVol" type="Label" parent="."]
margin_top = 49.0
margin_right = 220.0
margin_bottom = 68.0
text = "Music Volume"

[node name="slideVolumeMain" type="HSlider" parent="."]
margin_top = 72.0
margin_right = 220.0
margin_bottom = 88.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="lblSfxVol" type="Label" parent="."]
margin_top = 92.0
margin_right = 220.0
margin_bottom = 111.0
text = "Sound Effects Volume"

[node name="slideSFXMain" type="HSlider" parent="."]
margin_top = 115.0
margin_right = 220.0
margin_bottom = 131.0
max_value = 1.0
step = 0.01
value = 0.5

[node name="btnMainMenu" type="Button" parent="."]
margin_top = 135.0
margin_right = 220.0
margin_bottom = 156.0
text = "Return to Maiin Menu"
[connection signal="item_selected" from="selDifficulty" to="." method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="slideVolumeMain" to="." method="_on_slideVolumeMain_value_changed"]
[connection signal="value_changed" from="slideSFXMain" to="." method="_on_slideSFXMain_value_changed"]
[connection signal="pressed" from="btnMainMenu" to="." method="_on_btnMainMenu_pressed"]
